# auto-copilot

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  executor.rs  lib.rs  main.rs  recorder.rs
src/components/: ActionForm.tsx  ActionItem.tsx  ControlBar.tsx  PipelineEditor.tsx
src/styles/: app.css
src/types/: index.ts
