[package]
name = "auto-pilot"
version = "0.1.0"
edition = "2021"

[lib]
name = "auto_pilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
